--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -35,15 +35,19 @@ body {
     border-radius: 5px;
     font-size: 16px;
 }
-btn-submit {
+.btn-submit {
     background-color: #333;
     color: white;
+    width: 100%;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
     font-size: 16px;
     cursor: pointer;
-}git add
+}
+.btn-submit {
+    background-color: black;
+}
 
 .footer {
     background-color: black;
